<resources>
    <string name="app_name">共享电动</string>

    <string name="my_info">个人信息</string>
    <string name="my_want">我的想租</string>
    <string name="history_order">历史订单</string>
    <string name="toolbar_add">发布共享</string>
    <string name="toolbar_edit">编辑</string>
    <string name="edit_battery">剩余公里数(KM)</string>
    <string name="edit_note">备注</string>
    <string name="edit_place">取车地点</string>
    <string name="edit_from">可用时间</string>
    <string name="edit_to">截止时间</string>
    <string name="edit_price">价格</string>
    <string name="edit_done">完成</string>
    <string name="required">*必填</string>
    <string name="please_enter_title">请输入标题</string>
    <string name="will_show_your_contact">您在个人资料中填写的联系方式将被展示</string>
    <string name="discard_change">放弃更改?</string>
    <string name="discard">放弃</string>
    <string name="cancel">取消</string>
    <string name="clear">清除</string>
    <string name="location_permission_needed">需要定位服务来显示附近车辆</string>
    <string name="strorage_permission_needed">需要外部存储权限来缓存地图数据</string>
    <string name="ok">好</string>
    <string name="show_contact">查看联系方式</string>
    <string name="location">住址</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">学号</string>
    <string name="password">密码</string>
    <string name="delete">删除</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="password_confirm">确认密码</string>
    <string name="wechat">微信</string>
    <string name="qq">QQ</string>
    <string name="phone_number">手机</string>

    <string name="one_contact_way">*联系方式可只填一种</string>
    <string name="at_least_6">*至少6位</string>
    <string name="nickname">昵称</string>
    <string name="personal_info">个人信息</string>
    <string name="change_password">修改密码</string>
    <string name="cancel_register">放弃注册？</string>
    <string name="cancel_modify_user">放弃修改？</string>
    <string name="upload_image">上传图片</string>
    <string name="title">标题</string>

    <string name="lease_out">借出</string>
    <string name="lease_in">借入</string>

    <string name="finished">已完成 > </string>
    <string name="using">进行中 > </string>

    <string name="not_loginned">未登录</string>
    <string name="click_to_login">点击登录</string>
    <string name="network_error">网络好像出错了</string>
    <string name="location_example">例如 : 32#510</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="auto_login_success">自动登录成功</string>
    <string name="exam_network">请检查网络连接</string>
    <string name="auto_login_failed">自动登录失败</string>
    <string name="login_success">登陆成功</string>
    <string name="login_failed">登陆失败</string>
    <string name="basic_info">基本信息</string>
    <string name="contact_way">联系方式</string>
    <string name="register_success">注册成功，已登录</string>
    <string name="id_registered">学号已经注册过</string>
    <string name="please_enter_correct_id">请输入正确学号</string>
    <string name="please_enter_correct_password">请输入密码，长度不少于6位</string>
    <string name="please_enter_name">请输入昵称</string>
    <string name="please_enter_id">请输入学号</string>
    <string name="password_diff">两次输入密码不一致，请重试</string>
    <string name="please_choose_sex">请选择性别</string>
    <string name="please_enter_address">请输入住址</string>
    <string name="modify_success">修改成功</string>
    <string name="exit_success">已退出登录</string>
    <string name="please_login">请先登录</string>
    <string name="id_or_password_error">用户名或密码错误</string>
    <string name="create_success">创建成功</string>
    <string name="delete_success">已删除</string>
    <string name="confirm_delete">确认删除吗？本操作无法撤回</string>
    <string name="canceled">已取消想要</string>
    <string name="liked">已想要</string>
    <string name="rent_out">借出</string>
    <string name="rent_in">借入</string>
    <string name="unconfirmed">车主未确认 > </string>
    <string name="do_you_want_this_car">想租这辆车吗？</string>
    <string name="each_can_see_contact">你和车主将可以看到对方的联系方式</string>
    <string name="want_rent">想租</string>
    <string name="copied">已复制</string>
    <string name="qq_not_installed">未安装QQ</string>
    <string name="phone_not_installed">未找到电话应用, 已复制到剪切板</string>
    <string name="liked_people">%d人正在想租</string>
    <string name="confirm_rent_out">确认租出</string>
    <string name="rent_out_success">确认租出成功，可以在历史订单中查看</string>
    <string name="choose_people">选择确认租车的人</string>
    <string name="bike_rented">这辆车已经租出过了</string>
    <string name="order_complete">订单已完成</string>
    <string name="refresh">刷新</string>
    <string name="refresh_success">刷新成功</string>
    <string name="confirm_returned">确认对方已经归还车辆？</string>
    <string name="returned">已归还</string>
    <string name="using_uncancelable">您正在使用这辆车，无法取消</string>
    <string name="my_post">我发布的</string>
    <string name="bike_deleted">车辆信息已被车主删除</string>
    <string name="set_permissions_in_settings">请在设置中开启位置和存储权限</string>
    <string name="used_uncancelable">您已使用完毕，无法取消</string>
    <string name="please_enter_original_password">请输入原密码</string>
    <string name="please_enter_new_password">请输入新密码</string>
    <string name="please_enter_confirm_password">请确认新密码</string>
    <string name="new_not_equal_confirm">两次输入的新密码不一致</string>
    <string name="password_length_longer_then_six">密码长度不能小于六位</string>
    <string name="wrong_password_try_again">原密码错误，请重试</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="new_password">新密码</string>
    <string name="original_password">原密码</string>
    <string name="modify_password">修改密码</string>
    <string name="confirm_modify">确认修改</string>
    <string name="wrong_password">密码错误</string>

</resources>
