<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/map_fragment">

    <fragment
        android:id="@+id/map_fragment"
        android:name="com.example.west2summer.map.MapFragment"
        android:label="@string/app_name"
        tools:layout="@layout/map_fragment">
        <action
            android:id="@+id/action_map_fragment_to_bike_info_dialog"
            app:destination="@id/bike_info_dialog"
            app:enterAnim="@anim/bottom_sheet_slide_in"
            app:exitAnim="@anim/bottom_sheet_slide_out" />
        <action
            android:id="@+id/action_map_fragment_to_editBikeInfoFragment"
            app:destination="@id/editBikeInfoFragment" />
    </fragment>
    <dialog
        android:id="@+id/bike_info_dialog"
        android:name="com.example.west2summer.dialog.BikeInfoDialogFragment"
        android:label="BikeInfoDialogFragment"
        tools:layout="@layout/bike_info_dialog_fragment">
        <argument
            android:name="bikeinfo"
            app:argType="com.example.west2summer.database.BikeInfo" />
        <action
            android:id="@+id/action_bike_info_dialog_to_editBikeInfoFragment"
            app:destination="@id/editBikeInfoFragment" />
    </dialog>

    <fragment
        android:id="@+id/editBikeInfoFragment"
        android:name="com.example.west2summer.edit.EditBikeInfoFragment"
        android:label="@string/toolbar_add"
        tools:layout="@layout/edit_bike_info_fragment">
        <argument
            android:name="bikeinfo"
            app:argType="com.example.west2summer.database.BikeInfo" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.west2summer.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:launchSingleTop="true" />
    </fragment>
    <action
        android:id="@+id/action_global_loginFragment"
        app:destination="@id/loginFragment" />
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.west2summer.login.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/register_fragment" />
    <action
        android:id="@+id/action_global_map_fragment"
        app:destination="@id/map_fragment" />

</navigation>