<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.west2summer.edit.EditBikeInfoViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".edit.EditBikeInfoFragment">

            <!--地点-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/ic_location_on_black_24dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.AppTheme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/edit_place"
                    app:helperText="@string/required">


                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView

                        android:id="@+id/tv_auto_complete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:completionThreshold="1"
                        android:minHeight="56dp"
                        android:paddingHorizontal="12dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:text="@={viewModel.uiPlace}"
                        tools:targetApi="o" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!--电池剩余-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/ic_battery_charging_full_black_24dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.AppTheme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/edit_battery">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:text="@={viewModel.uiBattery}" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!--可用时间-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/ic_date_range_black_24dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.AppTheme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/edit_from">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:text="@={viewModel.uiFrom}" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!--截止时间-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_more_black_24dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.AppTheme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/edit_to">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:text="@={viewModel.uiTo}" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!--价格-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/ic_iconfont_money" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.AppTheme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/edit_price">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal"
                        android:singleLine="true"
                        android:text="@={viewModel.uiPrice}" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!--备注-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/ic_more_black_24dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.AppTheme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:helperText="@string/will_show_your_contact"
                    app:helperTextEnabled="true"
                    android:hint="@string/edit_note">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.uiNote}" />


                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>